Fixes block selector overflow.

--- a/packages/demo-theme/src/style/base.scss
+++ b/packages/demo-theme/src/style/base.scss
@@ -15,7 +15,6 @@ html{
 
   @include desktop-and-tablet{
     min-height: calc(100vh - 230px);
-    margin-top: 50px;
   }
 }
 
